# job-scraper

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.django  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
admin_panel/: README.md
admin_panel/config/: settings.py  urls.py
admin_panel/core/: admin.py  apps.py  models.py
admin_panel/core/management/commands/: clean_location_changes.py
admin_panel/core/migrations/: 0001_initial.py
admin_panel/core/static/core/: autocomplete_filter.js
admin_panel/core/templates/admin/core/vacancy/: change_list.html
admin_panel/core/templates/core/: autocomplete_filter.html
debug_output/: cv.html  cv_report.json  cvbankas.html  cvbankas_report.json  cvmarket.html  cvmarket_report.json  cvonline.html  cvonline_report.json
deploy/: Caddyfile  deploy-local.sh  deploy-remote.sh  remote.conf.local.example
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  002_companies_welcome.py  003_vacancy_translations.py  004_translation_cache_telegram_subscriptions.py  005_telegram_subscription_deliveries_and_fts.py  006_telegram_users.py  007_cities.py  008_monitoring_views.py  009_company_groups.py  010_schedules.py
scripts/: debug_selectors.py  init_db.sql
src/: config.py  logger.py  main.py  scheduler.py
src/db/: engine.py  repository.py
src/models/: orm.py  schemas.py
src/scrapers/: base.py  cv.py  cvbankas.py  cvmarket.py  cvonline.py
src/services/: admin_notifier.py  city_backfill.py  city_normalizer.py  company_backfill.py  company_normalizer.py  deepl_client.py  metrics.py  metrics_exporter.py  scrape_service.py  search_query.py  subscription_notifier.py  telegram_bot.py  telegram_messages.py  translation_service.py
tests/: conftest.py  test_admin_notifier.py  test_repository.py  test_scheduler.py  test_schemas.py  test_search_and_subscriptions.py  test_telegram_api_retry.py  test_telegram_bot.py  test_translation_service.py
