[tool.poetry]
name = "job-scraper"
version = "0.1.0"
description = "Periodic job vacancy scraper for Lithuanian job boards"
authors = ["Booka <boo@bo0.me>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.44.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
apscheduler = "^3.10.4"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
tenacity = "^8.3.0"
deepdiff = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-playwright = "^0.5.0"
mypy = "^1.10.0"
black = "^24.4.0"
ruff = "^0.4.0"
pytest-cov = "^5.0.0"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
