[tool.poetry]
name = "job-scraper"
version = "0.1.0"
description = "Periodic job vacancy scraper for Lithuanian job boards"
authors = ["booka <boo@bo0.me>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.44.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
apscheduler = "^3.10.4"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
tenacity = "^8.3.0"
httpx = "^0.28.1"
aiogram = {version = "^3.29.0", python = "<3.15"}
django = "^5.0"
psycopg = {extras = ["binary"], version = "^3.1"}
gunicorn = "^22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.4.0"
pytest-playwright = "^0.8.0"
mypy = "^1.10.0"
black = "^26.0.0"
ruff = "^0.4.0"
pytest-cov = "^7.0.0"
aiosqlite = "^0.21.0"
pre-commit = "^3.7.0"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]
# Line length is owned by the formatter (black, line-length = 100). Ruff's E501
# would additionally flag long string/URL/log lines the formatter won't wrap,
# so we disable it here per Ruff's own guidance when a formatter is in use.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# admin_panel models are UNMANAGED reflections of the Alembic-owned Postgres
# schema; their nullable text columns must be declared null=True to mirror the
# DB exactly, so DJ001 ("avoid null=True on string fields") does not apply.
"admin_panel/core/models.py" = ["DJ001"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
